--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
   },
   "dependencies": {
     "@babel/plugin-proposal-object-rest-spread": "^7.10.1",
+    "axios": "^0.19.2",
+    "normalize.css": "^8.0.1",
     "webpack-dev-server": "^3.11.0"
   }
 }
